...
                foregroundColor: Colors.white,
              ),
              onPressed: () {
                onDeleteTip(tipId); // Call the onDeleteTip callback
                Navigator.of(context).pop(); // Close the dialog
              },
              child: const Text('Delete'),
            ),
            TextButton(
              style: TextButton.styleFrom(
                backgroundColor: const Color(0xFF794747),
                foregroundColor: Colors.white,
              ),
...
